Fix bug to white gap in under dark when category list opened

--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -10095,9 +10095,8 @@ body {
 .sb-sidenav-toggled #layoutSidenav #layoutSidenav_content .dark {
   content: "";
   display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
+  position: fixed;
+  top: 50px;
   width: 100%;
   height: 100%;
   background: #000;
